# kryptonask

./: README.md  docker-compose.yml  start.sh
.github/workflows/: ci.yml
backend/: .env  Dockerfile  Procfile  README.md  celery_worker.py  database.py  database_models.py  db_utils.py  main.py  models.py  pyproject.toml  requirements.txt  teste.py
backend/logs/: all_threads.json  thread_id.json
backend/routers/: admins.py  apps.py  assistant.py  auth.py  chat_history.py  counter.py  historico.py  logs.py  process_pdf.py  setores.py  title.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: .env  App.js  AuthContext.js  api.js  index.js
frontend/src/components/: AdminPanel.js  AssistantCard.js  AssistantGallery.js  AssistantListItem.js  AuthWrapper.js  Card.js  ChatInterface.js  ConversationHistory.js  HomePage.js  Sidebar.js  StreamingTextMessage.js
