[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.9",
    "langchain-google-community>=2.0.7",
    "openai==1.78.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.1.0",
    "pymysql>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
    "streamlit-card>=1.0.2",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
]
